samples/_failures_safe/1761288297_edd28f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ae1c4258.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_ae1c4258.c:184:29: error: expected ‘;’ at end of input
  184 |                 graph->edges
      |                             ^
      |                             ;
./samples/SAFE/__tmp_ae1c4258.c:184:17: error: expected declaration or statement at end of input
  184 |                 graph->edges
      |                 ^~~~~
./samples/SAFE/__tmp_ae1c4258.c:184:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ae1c4258.c:184:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ae1c4258.c:184:17: error: expected declaration or statement at end of input
